# Copyright (c) 2025 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

import("//build/ohos.gni")
import("//foundation/arkui/ace_engine/ace_config.gni")

VIBRATOR_ROOT = "//plugins/vibrator"

vibrator_include = [
  "$VIBRATOR_ROOT/interfaces/js/napi/vibrator/include",
  "$VIBRATOR_ROOT/utils/common/include",
  "$VIBRATOR_ROOT/interfaces/inner_api/vibrator",
  "$VIBRATOR_ROOT/interfaces/kits/c",
  "$VIBRATOR_ROOT/frameworks/native/vibrator/include",
  "$VIBRATOR_ROOT/mock",
]

vibrator_source = [
  "$VIBRATOR_ROOT/interfaces/js/napi/vibrator/src/vibrator_js.cpp",
  "$VIBRATOR_ROOT/interfaces/js/napi/vibrator/src/vibrator_napi_error.cpp",
  "$VIBRATOR_ROOT/interfaces/js/napi/vibrator/src/vibrator_napi_utils.cpp",
  "$VIBRATOR_ROOT/interfaces/js/napi/vibrator/src/vibrator_pattern_js.cpp",
  "$VIBRATOR_ROOT/frameworks/native/vibrator/vibrator_agent.cpp",
  "$VIBRATOR_ROOT/frameworks/native/vibrator/src/vibrator_service_client.cpp",
  "$VIBRATOR_ROOT/utils/common/src/file_utils.cpp",
]
