# Copyright (c) 2023 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

import("//build/ohos.gni")
import("//foundation/arkui/ace_engine/ace_config.gni")

ohos_source_set("ability_access_ctrl_ios") {
  sources = [
    "ability_access_ctrl_impl.mm",
    "ability_access_ctrl_ios.mm",
  ]

  defines = [ "IOS_PLATFORM" ]

  if (target_cpu == "arm64") {
    defines += [ "_ARM64_" ]
  }

  frameworks = [
    "Photos.framework",
    "CoreLocation.framework",
  ]
  configs = [ "$ace_root:ace_config" ]

  cflags_objc = [
    "-fvisibility=default",
    "-fobjc-weak",
  ]

  cflags_objcc = cflags_objc

  deps = [ "//plugins/interfaces/native:ace_plugin_util_ios" ]

  subsystem_name = "plugins"
  part_name = "common_event"
}
